Added queries for mobile and tablet

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
       name="description"
       content="Rock Paper Scissors is a classic game to play when you're bored or need to make a life-changing decision."
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/queries.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
