--- a/index.html
+++ b/index.html
@@ -44,21 +44,21 @@
           </button>
         </div>
       </section>
-      <section class="section rel">
-        <div class="container grid grid--2-cols">
+      <section class="section">
+        <div class="container small grid grid--3-cols smaller-gap">
           <p class="result">Come on, make your choice!</p>
           <div class="scores grid sml">
             <img src="img/winning.png" class="result-icon" alt="Winner's Trophy" />
             <p class="player">Player</p>
             <p class="player-score">0</p>
           </div>
+          <button class="try-again">Try again</button>
           <div class="scores grid sml">
             <img src="img/loser.png" class="result-icon" alt="Sad loser" />
             <p class="player">Computer</p>
             <p class="computer-score">0</p>
           </div>
         </div>
-        <button class="try-again">Try again</button>
       </section>
     </main>
   </body>
