--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
       </section>
       <section class="section">
-        <div class="container grid grid--3-cols safari-fix">
+        <div class="container grid grid--3-cols">
           <button class="btn-choice rock">
             <img src="img/rocks.png" class="choice-icon" alt="Rocks" />
           </button>
